@@ -17,11 +17,8 @@
 
 #define NO_BUFFER_LABEL "No buffer"
 #define DEFAULT_FONT    "-*-courier-medium-r-normal--12-*-*-*-*-*-*-*"
-#define USE_APP_HELPER  YES_PLEASE_DO
 
-#ifdef USE_APP_HELPER
 extern GnomeUIInfo help_menu[], file_menu[], view_menu[], main_menu[];
-#endif
 
 #define DATA_TYPE_HEX   0
 #define DATA_TYPE_ASCII 1
@@ -41,28 +38,41 @@ typedef struct _JumpDialog {
 
 typedef struct _ReplaceDialog {
   GtkWidget *window;
-  gint search_type;
   GtkWidget *f_string, *r_string;
   GtkWidget *replace, *replace_all, *next, *close;
   GtkWidget *type_button[2];
+
+  gint search_type;
 } ReplaceDialog; 
 
 typedef struct _FindDialog {
   GtkWidget *window;
-  gint search_type;
   GtkWidget *f_string;
   GtkWidget *f_next, *f_prev, *f_close;
   GtkWidget *type_button[2];
+
+  gint search_type;
 } FindDialog;
+
+typedef struct _Converter {
+  GtkWidget *window;
+  GtkWidget *x_entry, *d_entry, *b_entry, *a_entry;
+  GtkWidget *close;
+
+  gulong value;
+} Converter;
 
 extern GnomeMDI *mdi;
 extern gint mdi_mode;
 
 extern GtkWidget *file_sel;
+
 extern FindDialog find_dialog;
 extern ReplaceDialog replace_dialog;
 extern JumpDialog jump_dialog;
-extern PropertyUI *prefs_ui;
+extern Converter converter;
+
+extern PropertyUI prefs_ui;
 
 extern GtkCheckMenuItem *save_config_item;
 
@@ -79,18 +89,11 @@ extern gchar *mdi_type_label[3];
 extern guint search_type;
 extern gchar *search_type_label[2];
 
-void setup_ui();
-
-void redraw_widget(GtkWidget *);
-
-#ifndef USE_APP_HELPER
-GtkMenuBar *create_mdi_menus(GnomeMDI *);
-#endif
-
 void create_find_dialog(FindDialog *);
 void create_replace_dialog(ReplaceDialog *);
 void create_jump_dialog(JumpDialog *);
-void create_prefs_dialog(PropertyUI **);
+void create_converter(Converter *);
+void create_prefs_dialog(PropertyUI *);
 
 void show_message(gchar *);
 void report_error(gchar *);
@@ -99,9 +102,6 @@ gint ask_user(GnomeMessageBox *);
 /* config stuff */
 void save_configuration();
 void load_configuration();
-
-/* misc */
-gint compare_data(guchar *, guchar *, gint);
 
 #endif
 
