@@ -26,12 +26,12 @@ GnomeUIInfo edit_menu[] = {
   { GNOME_APP_UI_ITEM, "Find...", NULL, find_cb, NULL, NULL,
     GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_SEARCH, 'F',
     GDK_CONTROL_MASK, NULL },
-  { GNOME_APP_UI_ITEM, "Replace...", NULL, find_cb, NULL, NULL,
+  { GNOME_APP_UI_ITEM, "Replace...", NULL, replace_cb, NULL, NULL,
     GNOME_APP_PIXMAP_NONE, NULL, 'R',
     GDK_CONTROL_MASK, NULL },
   { GNOME_APP_UI_SEPARATOR, NULL, NULL, NULL, NULL, NULL,
     GNOME_APP_PIXMAP_NONE, NULL, 0, 0, NULL },
-  { GNOME_APP_UI_ITEM, "Goto Byte...", NULL, find_cb, NULL, NULL,
+  { GNOME_APP_UI_ITEM, "Goto Byte...", NULL, jump_cb, NULL, NULL,
     GNOME_APP_PIXMAP_NONE, NULL, 'G',
     GDK_CONTROL_MASK, NULL },
   { GNOME_APP_UI_ENDOFINFO }
