@@ -1,3 +1,9 @@
+1998-06-17  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
+
+	* ui.c: added create_converter() fucntion that creates a
+	base conversion dialog.
+	* callbacks.[ch]: some stuff for base conversion.
+	
 1998-06-15  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
 
 	* ui.c: added radio buttons to find/replace dialogs  to enable
